# meme-cloack

./: .env.example  .gitignore  .mcp.json.example  Cargo.toml  HANDOVER.md  README.md
.claude/skills/meme-expert/: SKILL.md
.claude/skills/meme-ops/: SKILL.md
deploy/: com.meme-expert.daily.plist  meme-expert-ingest.service  research-prompt.md  run-daily-research.sh
docs/: ARCHITECTURE.md  DEPLOY.md
src/: cli.rs  config.rs  db.rs  helius.rs  ingest.rs  main.rs  mcp.rs  model.rs  paper.rs  prune.rs  pumpfun_decode.rs  pumpportal.rs  screen.rs  stats.rs  survivors.rs  util.rs  writer.rs
