[package]
name = "meme-expert"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[[bin]]
name = "meme-expert"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
dotenvy = "0.15.7"
duckdb = { version = "1.10504.0", features = ["bundled", "r2d2"] }
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
r2d2 = "0.8.10"
rmcp = { version = "1.7.0", default-features = false, features = ["server", "transport-io", "macros"] }
rustls = "0.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "io-std"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
